Fixed Github commit box layout on smaller screens

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,10 +1,9 @@
 .home {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 
 .blurb {
-  grid-column: 1/3;
   justify-self: center;
   display: grid;
   justify-items: center;
@@ -54,4 +53,13 @@ h3 {
 
 .commit time {
   text-align: center;
+}
+
+@media screen and (min-width: 1000px) {
+  .home {
+    grid-template-columns: 1fr 1fr;
+  }
+  .blurb {
+    grid-column: 1/3;
+  }
 }
